vlib/v/checker/tests/comptime_field_selector_not_in_for_err.vv
struct Foo {
	test int
	name string
}

fn test<T>() {
	mut t := T{}
	name := 'test'
	t.$(name) = '3'
}

fn main() {
	test<Foo>()
}
